# cxx_math_const

./: .dockerignore  .gitignore  .travis.yml  CMakeLists.txt  Doxyfile  LICENSE  README.md  TODO  TODO.md  build.sh  cmake_clean.sh  cmake_coverage.sh  cmath_const.txt  cmath_variable_template  ext_math_const.h  math_const.h  notes.txt  test_cmath_const.cpp  test_ext_math_const.cpp  test_math_const.cpp  test_math_const.txt
docs/html/: dir_106756a8ee71bdde7f7b779a3a0a52e4.html  dir_a1a854be586b511af52e991b434140ee.html  dir_d44c64559bbebec7f509842c48db8b23.html  ext_2math__constants_8h.html  ext_2math__constants_8h_source.html  files.html  graph_legend.html  index.html  math__constants_8h.html  math__constants_8h_source.html
docs/html/search/: all_0.js  files_0.js
docs/latex/: dir_106756a8ee71bdde7f7b779a3a0a52e4.tex  dir_a1a854be586b511af52e991b434140ee.tex  dir_d44c64559bbebec7f509842c48db8b23.tex  ext_2math__constants_8h.tex  files.tex  math__constants_8h.tex  refman.tex
docs/papers/: D0631R8.docx  email.txt
include/: cmath_const.h  math  math_const.h  math_constants.h  math_constants_float128.h  math_constants_mpreal.h  numbers
include/emsr/: math_constants.h  math_constants_float128.h  math_constants_mpreal.h
include/ext/: cmath  cmath_const.h  math  math_const.h  math_constants.h  math_constants_float128.h  math_constants_mpreal.h  numbers
output/: test_ext_math_constants.txt  test_math_const_float128.txt  test_math_constants.txt
scripts/: testsuite.sh
src/: test_cmath_const.cpp  test_ext_cmath_const.cpp  test_ext_math_const.cpp  test_ext_math_constants.cpp  test_math_const.cpp  test_math_const_float128.cpp  test_math_constants.cpp
testsuite/26_numerics/headers/math/: constants_std_c++20.cc
